[project]
name = "hidratespark-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for HidrateSpark PWA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server.py"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

